# win32-cargo-generate

./: Cargo.toml  README.md
src/: main.rs
