[package]
name = "win32-app"
version = "0.1.0"
authors = ["ArmsOfSorrow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "winuser", "libloaderapi", "processthreadsapi", "winbase"] }